--- a/src/components/ClosingComments/ClosingComments.module.css
+++ b/src/components/ClosingComments/ClosingComments.module.css
@@ -1,68 +1,272 @@
 .container {
-  background-color: var(--tan);
-  padding-top: 10rem;
-  padding-bottom: 10rem;
+  background-color: var(--purple2);
+  padding-top: 15rem;
+  padding-bottom: 15rem;
+}
+
+.top {
+  display: grid;
+  grid-template-columns: 1fr;
+  padding-top: 1.5rem;
+  margin-top: 10rem;
+}
+
+.imgContianer {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  /* animation: float 5s ease-in-out infinite; */
+}
+
+.heading {
+  position: relative;
+}
+
+.headingContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 2rem;
+  overflow: hidden;
+}
+
+.animatedLine {
+  position: relative;
+  will-change: transform, opacity;
+  margin: 0;
+  padding: 0;
+  color: var(--white);
+  
+  font-size: 3vw;
+  font-weight: 500;
+  line-height: 1.2em;
+  text-align: center;
+}
+
+@keyframes float {
+  0% {
+    transform: translateY(0);
+  }
+  25% {
+    transform: translateY(-50px);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  75% {
+    transform: translateY(-50px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.span {
+  color: var(--purple);
+  letter-spacing: 7px;
+  text-align: center;
+  font-size: 1.5rem;
+  text-transform: uppercase;
 }
 
 .content {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  margin-top: 7rem;
+}
+
+.heading {
+  color: var(--white);
+  background: linear-gradient(
+    135deg,
+    rgba(252, 210, 205, 1) 15%,
+    rgba(189, 183, 213, 1) 65%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.bottomBtnArea {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  width: 100%;
+}
+
+.btnContainer {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  width: 30%;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 5rem;
+}
+
+.right {
+  border: 1px solid var(--white);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  border-radius: 25px;
+}
+
+.rightSideTop {
+  padding: 2rem;
+}
+
+.headingii {
+  color: var(--white);
+}
+
+.middle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-top: 1px dashed var(--lightGray);
+}
+
+.middleLeft {
+  padding: 2rem;
+  border-right: 1px dashed var(--lightGray);
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.icon {
+  color: var(--pink);
+  width: 5rem;
+  height: 5rem;
+}
+
+.middleRight {
+  padding: 2rem;
+}
+
+.copyii {
+  color: var(--lightGray);
+  font-weight: 400;
+  width: 90%;
+}
+
+.bottom {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  border-top: 1px dashed var(--lightGray);
+  width: 100%;
+}
+
+.b1,
+.b2,
+.b3 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--lightGray);
+  height: 100%;
+  padding: 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 2rem;
+  gap: 1rem;
 }
 
-.heading,
-.headingii {
-  width: 60%;
-  margin-right: auto;
-  font-size: 7rem;
-  display: inline-block;
-  font-size: 4rem;
+.b1,
+.b2 {
+  border-right: 1px dashed var(--lightGray);
 }
 
-.headingii {
-  display: none;
-  color: var(--purple);
-  letter-spacing: -0.5px;
-}
-
-.revealText {
+.headingiii {
+  text-align: center;
   color: var(--white);
-  filter: drop-shadow(0 0 0.15rem var(--purple));
-  line-height: 1;
+  font-weight: 600;
 }
 
-.bottom {
-  margin-top: 5rem;
+.processContainer {
+  margin-top: 20rem;
 }
 
 @media screen and (max-width: 1068px) {
+  .top,
+  .box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+  }
+
+  .content {
+    padding: 3rem;
+    padding-top: 2rem;
+    margin-top: 3rem;
+    grid-template-columns: repeat(1, 1fr);
+  }
+
   .heading,
   .headingii {
-    width: 100%;
     text-align: center;
-    font-size: 10rem;
+  }
+
+  .heading,
+  .copyii {
+    width: 100%;
+  }
+
+  .right {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .rightSideTop {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .bottomBtnArea {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .btnContainer {
+    margin-left: auto;
+    margin-right: auto;
+    /* margin-top: 1rem; */
+    width: 60%;
   }
 }
 
-@media screen and (max-width: 668px) {
-  .container {
-    padding-top: 10rem;
-    padding-bottom: 10rem;
+@media screen and (max-width: 768px) {
+  .content {
+    padding: 0rem;
+    padding-top: 2rem;
   }
 
-  .heading,
-  .headingii {
-    font-size: 5rem;
-    font-weight: 500;
+  .btnContainer {
+    margin-top: 3rem;
   }
-/* 
-  .headingii {
-    display: block;
-  }
+}
 
-  .heading {
-    display: none;
-  } */
+@media screen and (max-width: 568px) {
+  .btnContainer {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .headingContainer {
+    gap: 4rem;
+  }
+  
+  .animatedLine {
+    font-size: 3rem;
+  }
 }
