--- a/src/components/FinalCTA/FinalCTA.module.css
+++ b/src/components/FinalCTA/FinalCTA.module.css
@@ -2,8 +2,7 @@
   background-color: var(--blue);
   padding: 3rem;
   border-radius: 25px;
-  margin-bottom: -5rem;
-  margin-top: 10rem;
+  
 }
 
 .sectionheadingContainer {
